# stateoverflow

./: .gitignore
device-decision-tree/device-data/: README.md  apple_fetch_to_csv.py  apple_products_optimizer.ipynb  llm_apple_fetch_to_csv.py  main.py  pyproject.toml
device-decision-tree/device-data/apple_data/: .bundles_with_needs_and_tradeoffs.csv.swp  bundles_with_needs_and_tradeoffs.csv  extracted_needs_constraints.csv  extracted_tradeoffs.csv  ipad_lineup_current_2025-08-19.csv  mac_lineup_current_2025-08-19.csv  macs_derived.csv
device-decision-tree/device-data/resources/webpages/: mac_table.html
device-decision-tree/device-decider/: .eslintrc.json  .gitignore  DEPLOYMENT.md  GITHUB_PAGES_SETUP.md  README.md  next.config.ts  package-lock.json  package.json
device-decision-tree/device-decider/.github/workflows/: deploy.yml
device-decision-tree/device-decider/src/app/: DecisionTreeViz.tsx  DecisionTreeVizSample.tsx  DeviceDecisionApp.tsx  DeviceDecisionExplorer.tsx  device_decision_app_config.json  page.tsx
device-decision-tree/device-decider/src/app/test-viz/: page.tsx
