[project]
name = "device-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "jupyter>=1.1.1",
    "lxml>=6.0.0",
    "pandas>=2.3.1",
    "playwright>=1.54.0",
    "pydantic>=2.11.7",
    "rapidfuzz>=3.13.0",
    "requests>=2.32.4",
    "rich>=14.1.0",
]
